feat: add GET /chat endpoint
The endpoint can be used by ctiapp-authproxy to provision
the mobile app: users with chat capability will have
access to messaging function
